--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "build": "rollup -c",
     "prepublishOnly": "npm run build",
     "dev": "rollup -c -w",
+    "lint": "echo TODO",
     "start": "sirv public"
   },
   "keywords": [
